--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "deploy": "vue-cli-service build && firebase deploy"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "cropperjs": "^1.5.6",
     "firebase": "^6.6.1",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
