--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
